testament/tests/shouldfail/tmsg.nim
discard """
msg: "Hello World"
target: c
"""

static:
  echo "something else"
